# toxicity-detection-thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  dev-container.json  docker-compose.dev.yml
src/: Dockerfile  db.sqlite3  requirements.txt
src/api/: serializers.py  urls.py  utils.py  views.py
src/api/notebook/: model.mtl.ipynb  model.train.ipynb
src/authuser/: models.py
src/authuser/migrations/: 0001_initial.py
src/chat/: consumers.py
src/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/report/: admin.py  apps.py  forms.py  helper.py  models.py  serializer.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
src/report/migrations/: 0001_initial.py  0002_remove_playerdemography_first_name_and_more.py  0003_remove_playerdemography_ethnicity.py  0004_alter_entry_text.py  0005_playerdemography_in_game_rank_level.py  0006_alter_playerdemography_country.py
src/report/notebook/: helper.ipynb
src/report/templates/: 404.html  add_report.html  layout.html
src/report/tests/: tests_report.py
src/theme/static/js/: script-form.js
src/theme/static_src/: tailwind.config.js
